tests/e2e/assignment_object_type_mismatch.error
Error: syntax error in story at line 2, column 1

2|    a.lon = "foobar"
      ^^^^^^^^^^^^^^^^

E0100: Can't assign `string` to `float`
