tests/e2e/assignment_object_type_mismatch.story
a = gmaps geocode address:"Venice"
a.lon = "foobar"
